--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@meshsdk/core": "^1.9.0-beta.18",
-    "@meshsdk/react": "^1.9.0-beta.18",
+    "@meshsdk/core": "1.8.14",
+    "@meshsdk/react": "1.8.14",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.479.0",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
